--- a/app/portal/templates/index.html
+++ b/app/portal/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <title>GENVASC Portal Holding Page</title>
+  <title>N3 Access Check</title>
 
   <style>
   	body {
@@ -23,8 +23,9 @@
 </head>
 
 <body>
-  <h1>GENVASC Portal Holding Page</h1>
-  <p>Your IP Address is <strong>{{ ip_address }}</strong></p>
+  <h1>N3 Access Check</h1>
+  <p>Congratulations, you are able to view web pages on the NHS N3 network.</p>
+  <p>Your N3 IP Address is <strong>{{ ip_address }}</strong>.</p>
 </body>
 
 </html>
