New external websites

--- a/app/portal/templates/index.html
+++ b/app/portal/templates/index.html
@@ -42,8 +42,8 @@
   <h2>This site is provided by the Leicester Biomedical Research Centre</h2>
   <p>Here are our sites available on N3:</p>
   <nav>
-      <a href="https://uhlbriccsext.uhl-tr.nhs.uk/redcap/" title="REDCap">REDCap for external organisations</a>
-      <a href="https://genvasc.uhl-tr.nhs.uk/" title="GENVASC GP Portal">GENVASC GP Portal</a>
+      <a href="https://uhlbriccsext.uhl-tr.nhs.uk/redcap/" title="Restricted REDCap">Restricted REDCap for external organisations</a>
+      <a href="https://brc.uhl-tr.nhs.uk/redcap/" title="Nation REDCap">National REDCap for external organisations</a>
   </nav>
 </body>
 
